2008-02-15  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-zero.patch: Added patch to add LIBFFI_CFLAGS to
	CFLAGS.
	* configure.ac: Added conditional check for libffi.
	* configure: Regenerated.

2008-02-15  Lillian Angel  <langel@redhat.com>

	* INSTALL: Updated
	* Makefile.am: Added new patch.
	* Makefile.in: Regenerated.
	* patches/icedtea-version.patch: Fixed
	* patches/icedtea-lesstif-64.patch: New patch.

2008-02-15  Lillian Angel  <langel@redhat.com>

	* configure.ac: Updated version.
	* configure: Regenerated.
	* patches/icedtea-version.patch: Removed instances of "OpenJDK" in
	hotspot.

2008-02-15  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (OPENJDK_URL): Add promoted version.
	* Makefile.in: Regenerated.

2008-02-15  Lillian Angel  <langel@redhat.com>

	* INSTALL: Updated.
	* Makefile.am: Updated patches. Added download target, added extract
	and extract-ecj targets. Removed clone and clone-ecj targets. Updated
	all paths and targets appropriately.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* configure.ac: Added new tools: tar, md5sum.
	* gcjwebplugin.cc: Updated for 1.6.0.
	* generated/sun/awt/X11/generator/sizer.32: Regenerated.
	* generated/sun/awt/X11/generator/sizer.32.c: Regenerated.
	* patches/icedtea-ant.patch: Updated.
	* patches/icedtea-bytebuffer-compact.patch: Updated.
	* patches/icedtea-certbundle.patch: Updated.
	* patches/icedtea-copy-plugs.patch: Updated.
	* patches/icedtea-core-build.patch: Updated.
	* patches/icedtea-ecj.patch: Updated.
	* patches/icedtea-gcc-4.3.patch: Updated.
	* patches/icedtea-headers.patch: Updated.
	* patches/icedtea-lib64.patch: Updated.
	* patches/icedtea-libraries.patch: Updated.
	* patches/icedtea-linker-options.patch: Updated.
	* patches/icedtea-memory-limits.patch: Updated.
	* patches/icedtea-plugin.patch: Updated.
	* patches/icedtea-ports.patch: Updated.
	* patches/icedtea-signature-iterator.patch: Updated.
	* patches/icedtea-signed-types.patch: Updated.