@@ -1,3 +1,11 @@
+2008-02-17  Mark Wielaard  <mark@klomp.org>
+
+	* Makefile.am (patch.stamp): Stop and fail when patch doesn't apply.
+	(clean-patch): Warn and fail when patch doesn't revert.
+	(patch-ecj.stamp): Fail when patch doesn't apply.
+	(clean-patch-ecj): Fail when patch doesn't revert.
+	* Makefile.in: Regenerated.
+
 2008-02-15  Lillian Angel  <langel@redhat.com>
 
 	* patches/icedtea-zero.patch: Added patch to add LIBFFI_CFLAGS to
